# scMetaIntel-Hub

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  local_accession_index.json  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
article/: main.tex  references.bib
article_figures/: article_summary.json  table1_corpus_stats.csv  table2_query_distribution.csv  table3_llm_comparison.csv  table4_retrieval.csv  table4_retrieval_by_difficulty.csv  table5_top5.csv  table_bootstrap_ci.csv  table_s1_embedding_full.csv  table_s2_context_management.csv
benchmarks/: 01_build_ground_truth.py  02_bench_embeddings.py  03_bench_retrieval.py  04_bench_llm.py  05_bench_public.py  05b_bench_context_management.py  06_bench_context.py  06_bench_finetune.py  06b_eval_finetuned.py  07_bench_e2e.py  08_bench_ablation.py  09_bench_e2e.py  BENCHMARK_DESIGN.md  README.md  bench_utils.py  discovery_index.json  eval_queries.json  model_cache_check.py  model_subsection_summary.py  quick_smoke_test.py  smoke_test_embeddings.json  smoke_test_llms.json
configs/: config.yaml
docs/: ARCHITECTURE.md  ARTICLE_PLAN.tex  EXPERIMENT_PLAN.md  MERGE_NOTES.md  MODEL_SUMMARY.md  STATUS_REPORT.md
geodh/: __init__.py  cli.py  config.yaml  geo_cancer_gap.py  geo_classifier.py  geo_convert.py  geo_download.py  geo_manifest.py  geo_search.py  geo_theme.py  geo_verify.py  geodh.py  pipeline.py
reports/: merged_project_audit_2026-03-19.md
scmetaintel/: __init__.py  __main__.py  answer.py  chat.py  config.py  embed.py  enrich.py  eval.py  (+5 more)
(+59 files in other folders)
