[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scMetaIntel-Hub"
version = "0.1.0"
description = "Unified GEO acquisition and metadata intelligence toolkit for single-cell dataset discovery"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "PeterPonyu" }
]
keywords = ["single-cell", "bioinformatics", "geo", "retrieval", "metadata"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/PeterPonyu/scMetaIntel-Hub"
Repository = "https://github.com/PeterPonyu/scMetaIntel-Hub"
Issues = "https://github.com/PeterPonyu/scMetaIntel-Hub/issues"

[project.scripts]
scmetaintel = "scmetaintel.__main__:main"
geodh = "geodh.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
include = ["scmetaintel*", "geodh*"]
